--- a/backend/index.html
+++ b/backend/index.html
@@ -6,19 +6,22 @@
   <title>HLS Stream</title>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
-<body>
+<body >
+  <div style="width:50%;height:50%;margin:auto">
   <video id="video" controls autoplay style="width: 100%; height: auto;"></video>
+  </div>
   <script>
+    
     if (Hls.isSupported()) {
       var video = document.getElementById('video');
       var hls = new Hls();
-      hls.loadSource('http://localhost:8000/live/stream.m3u8');
+      hls.loadSource('http://localhost:8000/live/webcam/index.m3u8');
       hls.attachMedia(video);
       hls.on(Hls.Events.MANIFEST_PARSED, function() {
         video.play();
       });
     } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-      video.src = 'http://localhost:8000/live/stream.m3u8';
+      video.src = 'http://localhost:8000/live/webcam/index.m3u8';
       video.addEventListener('canplay', function() {
         video.play();
       });
