--- a/backend/index.html
+++ b/backend/index.html
@@ -7,23 +7,67 @@
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body >
-  <div style="width:50%;height:50%;margin:auto">
-  <video id="video" controls autoplay style="width: 100%; height: auto;"></video>
+  <div style="display:flex;flex-flow: wrap;gap:20px;margin:auto;">
+
+  <video id="video1" controls autoplay style="width: 426px; height:240px;"></video>
+  <video id="video2" controls autoplay style="width: 426px; height: 240px;"></video>
+  <video id="video3" controls autoplay style="width: 426px; height: 240px;"></video>
+  <video id="video4" controls autoplay style="width: 426px; height: 240px;"></video>
+
   </div>
   <script>
-    
+    let camera1='HF4G147354',camera2='HF4G149338',camera3='HF4G147345',camera4='HF4G080004'
+    let array=[]
     if (Hls.isSupported()) {
-      var video = document.getElementById('video');
-      var hls = new Hls();
-      hls.loadSource('http://localhost:8000/live/webcam/index.m3u8');
-      hls.attachMedia(video);
-      hls.on(Hls.Events.MANIFEST_PARSED, function() {
-        video.play();
+
+      var video1 = document.getElementById('video1');
+      var hls1 = new Hls();
+      hls1.loadSource(`http://localhost:8000/live/${camera1}/index.m3u8`);
+      hls1.attachMedia(video1);
+      hls1.on(Hls.Events.MANIFEST_PARSED, function() {
+        video1.play();
       });
+
+      var video2 = document.getElementById('video2');
+      var hls2 = new Hls();
+      hls2.loadSource(`http://localhost:8000/live/${camera2}/index.m3u8`);
+      hls2.attachMedia(video2);
+      hls2.on(Hls.Events.MANIFEST_PARSED, function() {
+        video2.play();
+      });
+      
+      var video3 = document.getElementById('video3');
+      var hls3 = new Hls();
+      hls3.loadSource(`http://localhost:8000/live/${camera3}/index.m3u8`);
+      hls3.attachMedia(video3);
+      hls3.on(Hls.Events.MANIFEST_PARSED, function() {
+        video3.play();
+      });
+
+      var video4 = document.getElementById('video4');
+      var hls4 = new Hls();
+      hls4.loadSource(`http://localhost:8000/live/${camera4}/index.m3u8`);
+      hls4.attachMedia(video4);
+      hls4.on(Hls.Events.MANIFEST_PARSED, function() {
+        video4.play();
+      });
+
     } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-      video.src = 'http://localhost:8000/live/webcam/index.m3u8';
-      video.addEventListener('canplay', function() {
-        video.play();
+      video1.src = `http://localhost:8000/live/${camera1}/index.m3u8`;
+      video1.addEventListener('canplay', function() {
+        video1.play();
+      });
+      video2.src = `http://localhost:8000/live/${camera2}/index.m3u8`;
+      video2.addEventListener('canplay', function() {
+        video2.play();
+      });
+      video3.src = `http://localhost:8000/live/${camera3}/index.m3u8`;
+      video3.addEventListener('canplay', function() {
+        video3.play();
+      });
+      video4.src = `http://localhost:8000/live/${camera4}/index.m3u8`;
+      video4.addEventListener('canplay', function() {
+        video4.play();
       });
     }
   </script>
