--- a/admin/src/app.html
+++ b/admin/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="./icon.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
