--- a/admin/src/app.html
+++ b/admin/src/app.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<style>
+
+			/* for poppins font uncomment below line */
+
+			/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+		
+			div,p{
+				font-family: "Poppins", sans-serif;
+				font-weight: 400;
+			} */
+		</style>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./icon.jpg" />
